syntax = "proto3";

package ccnu.v1;
option go_package="github.com/asynccnu/ccnubox-be/be-api/gen/proto/ccnu/v1;ccnuv1";

service CCNUService {
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc GetCCNUCookie(GetCCNUCookieRequest)returns(GetCCNUCookieResponse);
}

message LoginRequest {
  string student_id = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
}

message GetCCNUCookieRequest{
  string student_id = 1;
  string password = 2;
}

message GetCCNUCookieResponse{
  string cookie = 1;
}
