syntax = "proto3";

package website.v1;
import "errors/errors.proto";

option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/website/v1;websitev1";

enum WebsiteErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  GET_WEBSITE_ERROR = 0 [(errors.code) = 501];
  DEL_WEBSITE_ERROR = 1 [(errors.code) = 502];
  SAVE_WEBSITE_ERROR = 2 [(errors.code) = 503];
}
